Created ServerModule1 and Form1; Edited settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -3,7 +3,9 @@ unique_ids:
     dashboard.html: 6VPLEE6VP2K3367XICV5KLDGIC75UTUZ
     single-column.html: WMS55I6PORXPUJHN64HADDZLMXTNLYM6
     theme.css: RC2W5AGGZYGAUI7AV544SLZGVGMMEOID
-  forms: {}
+  forms:
+    Form1: '1730451672337914967476906.1256'
   modules: {}
   scripts: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1730451906203883546407777.6338'
