--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,9 +1,37 @@
 allow_embedding: false
+db_schema:
+  files:
+    client: none
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: path
+      type: string
+    - admin_ui: {order: 1, width: 200}
+      name: file
+      type: media
+    - admin_ui: {order: 2, width: 200}
+      name: file_version
+      type: string
+    server: full
+    title: Files
+  table_2:
+    client: none
+    columns: []
+    server: full
+    title: Table 2
 name: Classic 1
 package_name: Classic_1
 runtime_options:
   client_version: '3'
   server_spec: {base: python310-minimal}
+  server_spec_disabled: {base: python310-minimal, requirements: ''}
   server_version: python3-sandbox
   version: 2
-services: []
+services:
+- client_config: {}
+  server_config: {}
+  source: /runtime/services/tables.yml
+- client_config: {}
+  server_config: {file_table: files}
+  source: /runtime/services/anvil/files.yml
+startup_form: Form1
