--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,5 +1,5 @@
 components:
-- layout_properties: {grid_position: 'PWMJWH,KSXYST'}
+- layout_properties: {grid_position: 'SVNMCN,JHKYMV'}
   name: drop_down_1
   properties: {}
   type: DropDown
