--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,7 +1,36 @@
 components:
-- layout_properties: {grid_position: 'SVNMCN,JHKYMV'}
-  name: drop_down_1
+- layout_properties: {grid_position: 'YEWNIR,WIUDIX'}
+  name: drop_down_jugendherbergen
   properties: {}
   type: DropDown
+- layout_properties: {grid_position: 'SBLLWA,QNSAZK'}
+  name: drop_down_zimmer
+  properties: {}
+  type: DropDown
+- layout_properties: {grid_position: 'CXOYNW,PNNTXI'}
+  name: drop_down_preiskategorie
+  properties: {}
+  type: DropDown
+- layout_properties: {grid_position: 'KKCXUU,OWXKUC'}
+  name: drop_down_gaeste
+  properties: {}
+  type: DropDown
+- event_bindings: {click: button_add_click}
+  layout_properties: {grid_position: 'UXFZYW,ZWMEYE'}
+  name: button_add
+  properties: {text: add}
+  type: Button
+- components:
+  - name: repeating_panel_gaeste
+    properties: {item_template: Form1.RowTemplate2}
+    type: RepeatingPanel
+  layout_properties: {grid_position: 'OWSSFC,TEAGPJ'}
+  name: data_grid_gaeste
+  properties:
+    columns:
+    - {data_key: column_2, id: VJQQOR, title: name}
+    - {data_key: column_1, id: JKSDUP, title: name}
+    - {data_key: column_3, id: OJLQEN, title: name}
+  type: DataGrid
 container: {type: ColumnPanel}
 is_package: true
