--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -20,17 +20,21 @@ components:
   name: button_add
   properties: {text: add}
   type: Button
+- layout_properties: {grid_position: 'GJHVVA,JJDBWS'}
+  name: button_remove
+  properties: {text: remove}
+  type: Button
 - components:
   - name: repeating_panel_gaeste
-    properties: {item_template: Form1.RowTemplate2}
+    properties: {item_template: Form1.RowTemplate1}
     type: RepeatingPanel
-  layout_properties: {grid_position: 'OWSSFC,TEAGPJ'}
+  layout_properties: {grid_position: 'IGKZZQ,BDAUEW'}
   name: data_grid_gaeste
   properties:
     columns:
-    - {data_key: column_2, id: VJQQOR, title: name}
-    - {data_key: column_1, id: JKSDUP, title: name}
-    - {data_key: column_3, id: OJLQEN, title: name}
+    - {data_key: column_1, id: JKSDUP, title: Column 1}
+    - {data_key: column_2, id: VJQQOR, title: Column 2}
+    - {data_key: column_3, id: OJLQEN, title: Column 3}
   type: DataGrid
 container: {type: ColumnPanel}
 is_package: true
