--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -25,16 +25,16 @@ components:
   properties: {text: remove}
   type: Button
 - components:
-  - name: repeating_panel_gaeste
+  - layout_properties: {slot: footer}
+    name: repeating_panel_gaeste
     properties: {item_template: Form1.RowTemplate1}
     type: RepeatingPanel
   layout_properties: {grid_position: 'IGKZZQ,BDAUEW'}
   name: data_grid_gaeste
   properties:
     columns:
-    - {data_key: column_1, id: JKSDUP, title: Column 1}
-    - {data_key: column_2, id: VJQQOR, title: Column 2}
-    - {data_key: column_3, id: OJLQEN, title: Column 3}
+    - {data_key: column_1, id: JKSDUP, title: Name}
+    - {data_key: column_2, id: VJQQOR, title: Alter}
   type: DataGrid
 container: {type: ColumnPanel}
 is_package: true
