Created Form1.RowTemplate2; Edited Form1.RowTemplate1 and Form1

--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -1,14 +1,22 @@
 components:
+- layout_properties: {column: OJLQEN}
+  name: label_3
+  properties: {align: left}
+  type: Label
 - layout_properties: {column: JKSDUP}
   name: label_1
   properties: {}
   type: Label
 - layout_properties: {column: VJQQOR}
   name: label_2
-  properties: {text: asdfadfa}
+  properties: {}
   type: Label
 - layout_properties: {column: OJLQEN}
-  name: label_3
+  name: label_4
+  properties: {}
+  type: Label
+- layout_properties: {column: OJLQEN}
+  name: label_5
   properties: {}
   type: Label
 container: {type: DataRowPanel}
