--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -25,6 +25,19 @@ components:
   properties: {text: remove}
   type: Button
 - components:
+  - data_bindings:
+    - {code: '', property: items, writeback: false}
+    name: repeating_panel_1
+    properties: {item_template: Form1.RowTemplate2}
+    type: RepeatingPanel
+  layout_properties: {grid_position: 'IGKZZQ,PEMUPI'}
+  name: data_grid_1
+  properties:
+    columns:
+    - {data_key: column_1, id: JKSDUP, title: Name}
+    - {data_key: column_2, id: VJQQOR, title: Alter}
+  type: DataGrid
+- components:
   - layout_properties: {slot: footer}
     name: repeating_panel_gaeste
     properties: {item_template: Form1.RowTemplate1}
