--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -1,22 +1,8 @@
 components:
-- layout_properties: {column: OJLQEN}
-  name: label_3
-  properties: {align: left}
-  type: Label
-- layout_properties: {column: JKSDUP}
-  name: label_1
-  properties: {}
-  type: Label
-- layout_properties: {column: VJQQOR}
-  name: label_2
-  properties: {}
-  type: Label
-- layout_properties: {column: OJLQEN}
-  name: label_4
-  properties: {}
-  type: Label
-- layout_properties: {column: OJLQEN}
-  name: label_5
+- data_bindings:
+  - {code: 'self.item[''Name'']', property: text, writeback: false}
+  layout_properties: {column: JKSDUP}
+  name: Name
   properties: {}
   type: Label
 container: {type: DataRowPanel}
