--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -20,25 +20,14 @@ components:
   name: button_add
   properties: {text: add}
   type: Button
-- layout_properties: {grid_position: 'GJHVVA,JJDBWS'}
+- event_bindings: {click: button_remove_click}
+  layout_properties: {grid_position: 'GJHVVA,JJDBWS'}
   name: button_remove
   properties: {text: remove}
   type: Button
 - components:
-  - data_bindings:
-    - {code: '', property: items, writeback: false}
-    name: repeating_panel_1
-    properties: {item_template: Form1.RowTemplate2}
-    type: RepeatingPanel
-  layout_properties: {grid_position: 'IGKZZQ,PEMUPI'}
-  name: data_grid_1
-  properties:
-    columns:
-    - {data_key: column_1, id: JKSDUP, title: Name}
-    - {data_key: column_2, id: VJQQOR, title: Alter}
-  type: DataGrid
-- components:
-  - layout_properties: {slot: footer}
+  - data_bindings: []
+    layout_properties: {slot: footer}
     name: repeating_panel_gaeste
     properties: {item_template: Form1.RowTemplate1}
     type: RepeatingPanel
@@ -46,8 +35,7 @@ components:
   name: data_grid_gaeste
   properties:
     columns:
-    - {data_key: column_1, id: JKSDUP, title: Name}
-    - {data_key: column_2, id: VJQQOR, title: Alter}
+    - {data_key: Name, id: JKSDUP, title: Name}
   type: DataGrid
 container: {type: ColumnPanel}
 is_package: true
