Edited Form1.RowTemplate1 and Form1

--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -5,5 +5,9 @@ components:
   name: Name
   properties: {}
   type: Label
+- layout_properties: {column: CVZJPC}
+  name: Preis
+  properties: {text: Preis}
+  type: Label
 container: {type: DataRowPanel}
 is_package: true
