Edited Form1.RowTemplate1 and Form1

--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -9,5 +9,7 @@ components:
   name: Preis
   properties: {text: Preis}
   type: Label
-container: {type: DataRowPanel}
+container:
+  properties: {align: left}
+  type: DataRowPanel
 is_package: true
