--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -16,27 +16,33 @@ components:
   properties: {}
   type: DropDown
 - event_bindings: {click: button_add_click}
-  layout_properties: {grid_position: 'UXFZYW,ZWMEYE'}
+  layout_properties: {grid_position: 'WDXVOB,VHOLGY'}
   name: button_add
   properties: {text: add}
   type: Button
 - event_bindings: {click: button_remove_click}
-  layout_properties: {grid_position: 'LGRYXU,HCBVKT'}
+  layout_properties: {grid_position: 'BIRUCB,ANVYJY'}
   name: button_remove
   properties: {text: remove}
   type: Button
 - components:
   - data_bindings: []
-    layout_properties: {slot: footer}
     name: repeating_panel_gaeste
-    properties: {item_template: Form1.RowTemplate1}
+    properties: {item_template: Form1.RowTemplate1, spacing_below: small}
     type: RepeatingPanel
-  layout_properties: {grid_position: 'IGKZZQ,BDAUEW'}
+  layout_properties: {grid_position: 'EQAWUV,TTHWLP'}
   name: data_grid_gaeste
   properties:
     columns:
     - {data_key: Name, id: JKSDUP, title: Name}
     - {data_key: Preis, id: CVZJPC, title: Preis}
   type: DataGrid
+- event_bindings: {click: book_click}
+  layout_properties: {grid_position: 'XAJXDO,OVFEVT'}
+  name: book
+  properties:
+    text: |
+      book
+  type: Button
 container: {type: ColumnPanel}
 is_package: true
