--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -3,27 +3,27 @@ components:
   name: drop_down_jugendherbergen
   properties: {align: full}
   type: DropDown
+- layout_properties: {grid_position: 'FWWJEZ,TJYWHK'}
+  name: drop_down_preiskategorie
+  properties: {align: full}
+  type: DropDown
 - layout_properties: {grid_position: 'IAWOOU,IUXINB'}
   name: drop_down_zimmer
   properties: {}
-  type: DropDown
-- layout_properties: {grid_position: 'BIGPEI,SXATCS'}
-  name: drop_down_preiskategorie
-  properties: {align: full}
   type: DropDown
 - layout_properties: {grid_position: 'URVXLV,PKBCVA'}
   name: drop_down_gaeste
   properties: {align: full}
   type: DropDown
 - event_bindings: {click: button_add_click}
-  layout_properties: {grid_position: 'BLBQCA,OKMHHS'}
+  layout_properties: {grid_position: 'GFWQBV,BXTXLG'}
   name: button_add
-  properties: {text: add}
+  properties: {text: Gast hinzufügen}
   type: Button
 - event_bindings: {click: button_remove_click}
-  layout_properties: {grid_position: 'BIRUCB,ANVYJY'}
+  layout_properties: {grid_position: 'AEFYPS,CYEYRM'}
   name: button_remove
-  properties: {text: remove}
+  properties: {text: Gast entfernen}
   type: Button
 - components:
   - data_bindings: []
@@ -35,14 +35,14 @@ components:
   properties:
     columns:
     - {data_key: Name, id: JKSDUP, title: Name}
-    - {data_key: Preis, id: CVZJPC, title: Vorzugs Preiskategorie}
+    - {data_key: Preis, id: CVZJPC, title: Bevorzugte Preiskategorie}
   type: DataGrid
 - event_bindings: {click: book_click}
   layout_properties: {grid_position: 'XAJXDO,OVFEVT'}
   name: book
   properties:
     text: |
-      book
+      Buchen
   type: Button
 container: {type: ColumnPanel}
 is_package: true
